summative.moria.Moria.scala.error
Erreur de compilation :
Moria:23: error: ambiguous reference to overloaded definition,
both method forward in class Moria of type (i: Int)Unit
and  method forward in class AbstractBuggle of type ()Unit
match expected type ?
right();forward;
        ^