summative.moria.Moria.scala.code
var baggle:Int=0;
var step:Int=0
left();left();
while(!isFacingWall()){
  forward();
  step+=1;
  if(isOverBaggle()){
    baggle+=1;
  }
}
for(a<-1 to step){
    backward();
  }
left();left();

for(c<-1 to baggle){
   menage();
 }
left();left()
while(!isFacingWall()){
  forward();
}
right();forward;
left();forward();forward();

def menage(){
  while(!isOverBaggle()){
    backward();
  }
  pickupBaggle();
  while(!isOverBaggle()){
    forward();
  }
  backward();
  dropBaggle();
  backward();
}
